Configure TS, to reimpliment the ToDo using TS

--- a/src/help.html
+++ b/src/help.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo Notes</title>
-    <link href="./des/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -21,12 +21,12 @@
         <h2 class="text-2xl font-poppins-bold">App's Help Guide</h2>
         <div class="mt-4">
             <h3 class="-ml-4">For Easy Navigation:</h3>
-            <img src="./img/foot.png" alt="Bottom navigation bar of App" class="mt-2 border rounded-lg object-contain h-fit w-80">
-            <img src="./img/nav.png" alt="top navigation bar of App" class="mt-4 border rounded-lg object-contain h-fit w-80">
+            <img src="../img/foot.png" alt="Bottom navigation bar of App" class="mt-2 border rounded-lg object-contain h-fit w-80">
+            <img src="../img/nav.png" alt="top navigation bar of App" class="mt-4 border rounded-lg object-contain h-fit w-80">
         </div>
         <div class="mt-4">
             <h3 class="-ml-4">Theme as per your ease:</h3>
-            <img src="./img/Theme.png" alt="Theme navigation button explantion" class=" object-contain h-fit w-80">
+            <img src="../img/Theme.png" alt="Theme navigation button explantion" class=" object-contain h-fit w-80">
         </div>
         <h3  class="text-xl font-poppins-extralight mt-11 underline underline-offset-4">Stay Connected</h3>
         <div class="text-white space-x-3 text-xl mt-2">
