--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo Notes</title>
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="dist/output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
@@ -16,8 +16,8 @@
             <button type="button" onclick="togalTheme()" class=" rounded-lg ml-4 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-sun"></i></button>
             <!-- <button type="button" onclick="resetAll()" class="shadow-inner shadow-white/30 rounded-lg px-2 ml-2 "><i class="fa-solid fa-broom"></i></button> -->
             <button type="button" onclick="resetAll()" class=" justify-self-end rounded-lg ml-4 hover:text-red-500 transition duration-300 ease-in-out"><i class="fa-solid fa-broom"></i></button>
-            <a href="./about.html" ><button type="button" class="ml-4 underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-circle-info"></i></button></a>
-            <a href="./help.html" ><button type="button" class=" ml-4 underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-handshake-angle"></i></button></a>  
+            <a href="./src/about.html" ><button type="button" class="ml-4 underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-circle-info"></i></button></a>
+            <a href="./src/help.html" ><button type="button" class=" ml-4 underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-handshake-angle"></i></button></a>  
         </div>
     </nav>
     <div class="todoCard flex flex-col flex-1 items-center mt-6">
@@ -43,13 +43,13 @@
     </div>
     <footer class="text-white text-center py-4 font-poppins-light">
         <div class="space-x-4 pb-3">
-            <a href="./about.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">About</button></a>
-            <a href="./help.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">Help</button></a>
+            <a href="./src/about.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">About</button></a>
+            <a href="./src/help.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">Help</button></a>
         </div>
         <p class="font-poppins-thin text-sm">&copy; 2024 Twilight Sols. All rights reserved.</p>
     </footer>
     
-    <script src="index.js"></script>
+    <script src="/src/index.js"></script>
 </body>
 
 </html>
