--- a/src/about.html
+++ b/src/about.html
@@ -13,7 +13,7 @@
     <nav id="myNav">
         <p class="ml-4">To do Notes</p> 
         <div class="mr-4 text-base">  
-            <a href="./index.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-house"></i></button></a>
+            <a href="../index.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-house"></i></button></a>
             <a href="./help.html" ><button type="button" class=" ml-4 underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-handshake-angle"></i></button></a>  
         </div>
     </nav>
@@ -33,7 +33,7 @@
 
     <footer class="text-white text-center py-4 font-poppins-light">
         <div class="space-x-4 pb-3 ">
-            <a href="./index.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">Home</button></a>
+            <a href="../index.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">Home</button></a>
             <a href="./help.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">Help</button></a>
         </div>
         <p class="font-poppins-thin text-sm">&copy; 2024 Twilight Sols. All rights reserved.</p>
