--- a/src/help.html
+++ b/src/help.html
@@ -14,7 +14,7 @@
         <p class="ml-4">To do Notes</p> 
         <div class="mr-4 text-base">  
             <a href="./about.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-circle-info"></i></button></a>
-            <a href="./index.html" ><button type="button" class="ml-4 underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-house"></i></button></a>
+            <a href="../index.html" ><button type="button" class="ml-4 underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out"><i class="fa-solid fa-house"></i></button></a>
         </div>
     </nav>
     <section class="todoCard flex flex-col flex-1 items-center mt-6 text-slate-50 min-w-80 md:min-w-[600px]">
@@ -41,7 +41,7 @@
 
     <footer class="text-white text-center py-4 font-poppins-light">
         <div class="space-x-4 pb-3">
-            <a href="./index.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">Home</button></a>
+            <a href="../index.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">Home</button></a>
             <a href="./about.html" ><button type="button" class="underline underline-offset-2 hover:text-yellow-300 transition duration-300 ease-in-out">About</button></a>
         </div>
         <p class="font-poppins-thin text-sm">&copy; 2024 Twilight Sols. All rights reserved.</p>
