Path bug fix for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p class="font-poppins-thin text-sm">&copy; 2024 Twilight Sols. All rights reserved.</p>
     </footer>
     
-    <script src="/src/index.js"></script>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
